# djaploy

./: .gitignore  LICENSE  README.md  pyproject.toml
djaploy/: __init__.py  app.py  artifact.py  builtin_hooks.py  certificates.py  changelog.py  config.py  deploy.py  discovery.py  hooks.py  notifications.py  utils.py  versioning.py
djaploy/apps/borg/infra/: djaploy_hooks.py
djaploy/apps/core/infra/: djaploy_hooks.py  templates.py  utils.py
djaploy/apps/janitor/: __init__.py  apps.py
djaploy/apps/janitor/infra/: djaploy_hooks.py
djaploy/apps/janitor/infra/commands/: createjanitoruser.py
djaploy/apps/nginx/: __init__.py  apps.py
djaploy/apps/nginx/infra/: djaploy_hooks.py
djaploy/apps/rclone/: __init__.py  apps.py
djaploy/apps/rclone/infra/: djaploy_hooks.py
djaploy/apps/sync_certs/: __init__.py  apps.py
djaploy/apps/sync_certs/infra/: djaploy_hooks.py
djaploy/apps/systemd/: __init__.py  apps.py
djaploy/apps/systemd/infra/: djaploy_hooks.py
djaploy/apps/tailscale/: __init__.py  apps.py
djaploy/apps/tailscale/infra/: djaploy_hooks.py
djaploy/apps/versioning/: __init__.py  apps.py
djaploy/apps/versioning/infra/: djaploy_hooks.py
djaploy/commands/: _utils.py  activate.py  configure.py  deploy.py  restore.py  rollback.py  status.py  sync_certs.py
djaploy/infra/: bluegreen.py  djaploy_hooks.py  templates.py  utils.py
djaploy/management/: utils.py
djaploy/management/commands/: configureserver.py  deploy.py  djaploy.py  restore_backup.py  rollback.py  sync_certs.py  update_certs.py  verify.py
djaploy/modules/: base.py  core.py  nginx.py  notifications.py  rclone.py  systemd.py  tailscale.py  versioning.py
local_testing/: .gitignore  Dockerfile.server  README.md  docker-compose.yml
local_testing/helloworld/: .gitignore  pyproject.toml
local_testing/helloworld/helloworld/: settings.py  urls.py  views.py  wsgi.py
local_testing/helloworld/infra/: config.py
local_testing/helloworld/infra/deploy_files/local/etc/nginx/sites-available/: helloworld
local_testing/helloworld/infra/deploy_files/local/etc/systemd/system/: helloworld.service
local_testing/helloworld/infra/inventory/: local.py
local_testing/scripts/: deploy.sh  entrypoint.sh  setup.sh  teardown.sh
tests/: test_artifact.py  test_bluegreen.py  test_borg.py  test_changelog.py  test_config.py  test_core_module.py  test_deploy_scripts.py  test_discovery.py  test_e2e_pipeline.py  test_gunicornherder.py  test_hooks.py  test_host_config.py  test_notifications.py  test_systemd_module.py  test_versioning.py
