[project]
name = "djaploy"
version = "1.1.3"
description = "Modular Django deployment system based on pyinfra"
authors = [
    {name = "Johanna Mae Dimayuga", email = "johanna@techco.fi"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["django", "deployment", "pyinfra", "automation", "infrastructure"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1", 
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "pyinfra>=3.4,<3.8",
    "django>=3.2",
]

[project.optional-dependencies]
certificates = ["certbot>=2.0"]
bunny = ["certbot-dns-bunny<=0.0.9"]

[project.scripts]
djaploy-django-pyinfra = "djaploy.bin.django_pyinfra:main"
gunicornherder = "djaploy.bin.gunicornherder:main"
[project.urls]
Homepage = "https://github.com/Technology-Company/djaploy"
Repository = "https://github.com/Technology-Company/djaploy"
Issues = "https://github.com/Technology-Company/djaploy/issues"
Documentation = "https://github.com/Technology-Company/djaploy#readme"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["djaploy*"]


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
