[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = "A minimal Django app for testing djaploy locally"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
gunicorn = "^21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
